correction contraste H1 contact

--- a/style.css
+++ b/style.css
@@ -824,10 +824,6 @@ h4 {
   border-color: #364577 !important;
 }
 
-.bg-dots-bg {
-  background-image: url("img/IMG-sized/dots_bg.webp");
-}
-
 .bg-lines-h2-bg {
   background-image: url("img/IMG-sized/lines_h2_bg.webp");
 }
